learning page update

--- a/templates/home_layout_b.html
+++ b/templates/home_layout_b.html
@@ -12,9 +12,9 @@
       <h3 class="text-lg font-semibold mb-4"><i class="ri-menu-line mr-1"></i>快捷导航</h3>
       <ul class="space-y-2">
         <li class="interactive sidebar-item p-3 rounded"><i class="ri-magic-line mr-1"></i>AI智能报告</li>
-        <li class="interactive sidebar-item p-3 rounded"><i class="ri-bar-chart-2-line mr-1"></i>多文档对比</li>
+        <li class="sidebar-item p-3 rounded text-gray-400" style="opacity: 0.6; pointer-events: none;"><i class="ri-bar-chart-2-line mr-1"></i>多文档对比</li>
         <li class="interactive sidebar-item p-3 rounded"><i class="ri-trending-up-line mr-1"></i>趋势预测</li>
-        <li class="interactive sidebar-item p-3 rounded"><i class="ri-share-line mr-1"></i>知识图谱</li>
+        <li class="sidebar-item p-3 rounded text-gray-400" style="opacity: 0.6; pointer-events: none;"><i class="ri-share-line mr-1"></i>知识图谱</li>
       </ul>
     </aside>
     <div class="col-span-9 space-y-6">
