--- a/templates/poi_map_visualization.html
+++ b/templates/poi_map_visualization.html
@@ -228,6 +228,7 @@ function initGoogleMapLoader() {
                                 目标区域 <span class="text-red-500">*</span>
                             </label>
                             <select id="region-select" class="input-modern w-full px-4 py-3 rounded-lg border focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all bg-white text-gray-800">
+                                <option value="成都市" selected>成都市</option>
                                 <option value="成都市武侯区">成都市武侯区</option>
                                 <option value="成都市锦江区">成都市锦江区</option>
                                 <option value="成都市金牛区">成都市金牛区</option>
