fix streaming report page

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,9 @@
                     <a href="{{ url_for('index') }}" class="hover:text-blue-200 transition-colors">
                         <i class="ri-home-5-line mr-1"></i>首页
                     </a>
+                    <a href="{{ url_for('report_gen.report_generation_page') }}" class="hover:text-blue-200 transition-colors">
+                        <i class="ri-file-text-line mr-1"></i>生产报告
+                    </a>
                     <a href="{{ url_for('upload_file') }}" class="hover:text-blue-200 transition-colors">
                         <i class="ri-upload-2-line mr-1"></i>上传分析
                     </a>
